--- a/style.css
+++ b/style.css
@@ -4,16 +4,18 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
+  background-color: #f0f0f0;
 }
 
 .calculator {
   text-align: center;
   width: 300px;
-  background-color: #f0f0f0;
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
+  margin-right: 5%;
+  background-color: #14213D;
 }
 
 #display {
@@ -42,8 +44,13 @@ button {
 
 #clear-delete {
   width: 45%;
+  background-color: #ced4da;
 }
 
-button:hover {
-  background-color: #ddd;
+#digit {
+  background-color: #E5E5E5;
+}
+
+#operation {
+  background-color: #FCA311;
 }
